# XDGC-

./: CMakeLists.txt  Globals.cpp  Globals.h  XDG.cpp
antireversal/: antidebug.h  antireversal.cpp
auth/: quartzauth.cpp  quartzauth.h
gumbo-query/: Document.cpp  Document.h  Node.cpp  Node.h  Object.cpp  Object.h  Parser.cpp  Parser.h  QueryUtil.cpp  QueryUtil.h  Selection.cpp  Selection.h  Selector.cpp  Selector.h
injection/: Injectable.cpp  Injectable.h  Injection.cpp  Injection.h
injection/mysql/: Error.h  Queries.h  Union.h
injection/tamper/: Equal2Like.cpp  Equal2Like.h  Space2Comment.cpp  Space2Comment.h  Tamper.cpp  Tamper.h
modules/: Cleaner.cpp  Cleaner.h  Exploiter.cpp  Exploiter.h  Generator.cpp  Generator.h  Module.h  Scraper.cpp  Scraper.h
modules/dorkers/: Aol.cpp  Aol.h  Bing.cpp  Bing.h  Dorker.cpp  Dorker.h  DuckDuckGo.cpp  DuckDuckGo.h  Ecosia.cpp  Ecosia.h  Google.cpp  Google.h  MyWebSearch.cpp  MyWebSearch.h  Qwant.cpp  Qwant.h  Yahoo.cpp  Yahoo.h  Yandex.cpp  Yandex.h  startpage.cpp  startpage.h
proxymanager/: Proxy.cpp  Proxy.h  ProxyManager.cpp  ProxyManager.h
settings/: Settings.cpp  Settings.h
utils/: ThreadPool.cpp  ThreadPool.h  Utils.h  base64.cpp  base64.h  blockingqueue.h  channel.h  hwid.cpp  hwid.h  md5.cpp  md5.h  url.cpp  url.h
